<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Split A Bill</string>
    <string name="action_settings">Settings</string>
    <string name="total_hint">00.00</string>
    <string name="bill_total">Bill Total</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="bill_splitby">Split Between</string>
    <string name="split_default">00</string>
    <color name="background">#78BCBC</color>
    <color name="white">#FFFFFF</color>
    <color name="btn_up">#78BCBC</color>
    <color name="btn_down">#66A0A0</color>
    <drawable name="btn_up">#78BCBC</drawable>
	<drawable name="btn_down">#66A0A0</drawable>
	<color name="black">#000000</color>
	<string name="bill_servicecharge">Service Charge</string>
	<string name="button_servicepercent">%</string>
	<string name="button_servicevalue">£</string>
	<string name="service_hint">20</string>
	<string name="sub_total">Grand Total</string>
	<string name="sub_total_value">£0:00</string>
	<color name="main_background">#C7D4D2</color>
</resources>