<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/bill_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/bill_total"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:hint="@string/total_hint"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:id="@+id/layout_splitby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/total_value"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bill_splitby"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="splitMinus"
            android:background="@color/background"
            android:text="@string/button_minus" />

        <TextView
            android:id="@+id/edit_splitby"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/split_default"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:onClick="splitPlus"
            android:background="@color/background"
            android:text="@string/button_plus" />

    </LinearLayout>

    <ListView
        android:id="@+id/listview_bills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_splitby" 
        android:minHeight="50dp" 
        android:background="@color/white"/>

</RelativeLayout>