<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".SplitABillActivity" >

    <LinearLayout
        android:id="@+id/ad_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bill_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ad_banner"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/border"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/bill_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bill_total"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:gravity="right"
            android:hint="@string/total_hint"
            android:inputType="numberDecimal"
            android:textAlignment="gravity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_servicecharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_bill_total"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/layout_service_charge_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bill_servicecharge"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/service_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:digits="0123456789"
                android:hint="@string/service_hint"
                android:inputType="numberDecimal" />

            <RadioGroup
                android:id="@+id/toggleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@+id/btn_service_percent"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1px"
                    android:background="@drawable/btn_service_charge"
                    android:checked="true"
                    android:onClick="onServiceTypeChange"
                    android:textOff="@string/button_servicepercent"
                    android:textOn="@string/button_servicepercent" />

                <ToggleButton
                    android:id="@+id/btn_service_value"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_service_charge"
                    android:onClick="onServiceTypeChange"
                    android:textOff="@string/button_servicevalue"
                    android:textOn="@string/button_servicevalue" />
            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_service_charge_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/service_charge_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/sub_total_value"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_subtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_servicecharge"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/sub_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub_total"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subtotal_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_total_value"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_splitby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_subtotal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bill_splitby"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_split"
            android:onClick="splitMinus"
            android:text="@string/button_minus" />

        <TextView
            android:id="@+id/edit_splitby"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/split_default"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_split"
            android:onClick="splitPlus"
            android:text="@string/button_plus" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview_bills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_splitby"
        android:background="@color/white"
        android:minHeight="50dp" />

</RelativeLayout>